[gd_scene load_steps=12 format=3 uid="uid://bnkgp10qi2855"]

[ext_resource type="MeshLibrary" uid="uid://cimyw5b3pruo4" path="res://proto.tres" id="1_036b0"]
[ext_resource type="PackedScene" uid="uid://y7tbjujgyinm" path="res://player.tscn" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://ciif1b1la0tuy" path="res://shape_slope_2.tscn" id="5_dwbse"]
[ext_resource type="Script" uid="uid://220uvgnjgrww" path="res://refs.gd" id="6_dwbse"]
[ext_resource type="PackedScene" path="res://pipe_2.tscn" id="6_pkg7o"]
[ext_resource type="PackedScene" path="res://shape_hollow_cylinder_2.tscn" id="7_gbfbk"]
[ext_resource type="Script" uid="uid://ljxom1r7uv7p" path="res://timer_g.gd" id="7_pkg7o"]
[ext_resource type="PackedScene" uid="uid://jaapslabu57v" path="res://floor_square_2.tscn" id="8_gbfbk"]
[ext_resource type="PackedScene" path="res://number_12.tscn" id="8_ioo17"]
[ext_resource type="PackedScene" path="res://wall_2.tscn" id="10_wse8f"]
[ext_resource type="PackedScene" uid="uid://crhatphulfc37" path="res://assets/proto/GLB format/flag.glb" id="11_ic0uy"]

[node name="World" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0643363, 0.167442, 0.381648)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_036b0")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(0, 2, 1310720, 1, 65534, 1310720, 2, 65534, 1310720, 2, 65535, 1310720, 2, 0, 1310720, 2, 1, 1310720, 2, 2, 1310720, 1, 2, 1310720, 1, 1, 1310720, 1, 0, 1310720, 1, 65535, 1310720, 65534, 1, 1310720, 65534, 0, 1310720, 65534, 65535, 1310720, 65534, 65534, 1310720, 3, 65535, 1310720, 3, 0, 1310720, 4, 0, 1310720, 4, 1, 1310720, 4, 2, 1310720, 3, 2, 1310720, 3, 1, 1310720, 5, 0, 1310720, 5, 65535, 1310720, 4, 65535, 1310720, 5, 1, 1310720, 5, 2, 1310720, 5, 3, 1310720, 4, 3, 1310720, 3, 3, 1310720, 2, 3, 1310720, 1, 3, 1310720, 0, 3, 1310720, 5, 65534, 1310720, 4, 65534, 1310720, 3, 65534, 1310720, 65534, 3, 1310720, 65534, 2, 1310720, 65535, 65534, 1310720, 65535, 65535, 1310720, 65535, 0, 1310720, 65535, 1, 1310720, 65535, 2, 1310720, 65535, 3, 1310720, 65535, 65533, 1310720, 0, 65533, 1310720, 0, 65534, 1310720, 0, 65535, 1310720, 0, 0, 1310720, 0, 1, 1310720, 65534, 65533, 1310720, 65529, 65527, 1310720, 65529, 65528, 1310720, 65529, 65529, 1310720, 65529, 65530, 1310720, 65529, 65531, 1310720, 65529, 65532, 1310720, 65529, 65533, 1310720, 65529, 65534, 1310720, 65529, 65535, 1310720, 65529, 0, 1310720, 65529, 1, 1310720, 65529, 2, 1310720, 65529, 3, 1310720, 65529, 4, 1310720, 65529, 5, 1310720, 65529, 6, 1310720, 65530, 65527, 1310720, 65530, 65528, 1310720, 65530, 65529, 1310720, 65530, 65530, 1310720, 65530, 65531, 1310720, 65530, 65532, 1310720, 65530, 65533, 1310720, 65530, 65534, 1310720, 65530, 65535, 1310720, 65530, 0, 1310720, 65530, 1, 1310720, 65530, 2, 1310720, 65530, 3, 1310720, 65530, 4, 1310720, 65530, 5, 1310720, 65530, 6, 1310720, 65531, 65527, 1310720, 65531, 65528, 1310720, 65531, 65529, 1310720, 65531, 65530, 1310720, 65531, 65531, 1310720, 65531, 65532, 1310720, 65531, 65533, 1310720, 65531, 65534, 1310720, 65531, 65535, 1310720, 65531, 0, 1310720, 65531, 1, 1310720, 65531, 2, 1310720, 65531, 3, 1310720, 65531, 4, 1310720, 65531, 5, 1310720, 65531, 6, 1310720, 65532, 65527, 1310720, 65532, 65528, 1310720, 65532, 65529, 1310720, 65532, 65530, 1310720, 65532, 65531, 1310720, 65532, 65532, 1310720, 65532, 65533, 1310720, 65532, 65534, 1310720, 65532, 65535, 1310720, 65532, 0, 1310720, 65532, 1, 1310720, 65532, 2, 1310720, 65532, 3, 1310720, 65532, 4, 1310720, 65532, 5, 1310720, 65532, 6, 1310720, 65533, 65527, 1310720, 65533, 65528, 1310720, 65533, 65529, 1310720, 65533, 65530, 1310720, 65533, 65531, 1310720, 65533, 65532, 1310720, 65533, 65533, 1310720, 65533, 65534, 1310720, 65533, 65535, 1310720, 65533, 0, 1310720, 65533, 1, 1310720, 65533, 2, 1310720, 65533, 3, 1310720, 65533, 4, 1310720, 65533, 5, 1310720, 65533, 6, 1310720, 65534, 65527, 1310720, 65534, 65528, 1310720, 65534, 65529, 1310720, 65534, 65530, 1310720, 65534, 65531, 1310720, 65534, 65532, 1310720, 65534, 4, 1310720, 65534, 5, 1310720, 65534, 6, 1310720, 65535, 65527, 1310720, 65535, 65528, 1310720, 65535, 65529, 1310720, 65535, 65530, 1310720, 65535, 65531, 1310720, 65535, 65532, 1310720, 65535, 4, 1310720, 65535, 5, 1310720, 65535, 6, 1310720, 0, 65527, 1310720, 0, 65528, 1310720, 0, 65529, 1310720, 0, 65530, 1310720, 0, 65531, 1310720, 0, 65532, 1310720, 0, 4, 1310720, 0, 5, 1310720, 0, 6, 1310720, 1, 65527, 1310720, 1, 65528, 1310720, 1, 65529, 1310720, 1, 65530, 1310720, 1, 65531, 1310720, 1, 65532, 1310720, 1, 65533, 1310720, 1, 4, 1310720, 1, 5, 1310720, 1, 6, 1310720, 2, 65527, 1310720, 2, 65528, 1310720, 2, 65529, 1310720, 2, 65530, 1310720, 2, 65531, 1310720, 2, 65532, 1310720, 2, 65533, 1310720, 2, 4, 1310720, 2, 5, 1310720, 2, 6, 1310720, 3, 65527, 1310720, 3, 65528, 1310720, 3, 65529, 1310720, 3, 65530, 1310720, 3, 65531, 1310720, 3, 65532, 1310720, 3, 65533, 1310720, 3, 4, 1310720, 3, 5, 1310720, 3, 6, 1310720, 4, 65527, 1310720, 4, 65528, 1310720, 4, 65529, 1310720, 4, 65530, 1310720, 4, 65531, 1310720, 4, 65532, 1310720, 4, 65533, 1310720, 4, 4, 1310720, 4, 5, 1310720, 4, 6, 1310720, 5, 65527, 1310720, 5, 65528, 1310720, 5, 65529, 1310720, 5, 65530, 1310720, 5, 65531, 1310720, 5, 65532, 1310720, 5, 65533, 1310720, 5, 4, 1310720, 5, 5, 1310720, 5, 6, 1310720, 6, 65527, 1310720, 6, 65528, 1310720, 6, 65529, 1310720, 6, 65530, 1310720, 6, 65531, 1310720, 6, 65532, 1310720, 6, 65533, 1310720, 6, 65534, 1310720, 6, 65535, 1310720, 6, 0, 1310720, 6, 1, 1310720, 6, 2, 1310720, 6, 3, 1310720, 6, 4, 1310720, 6, 5, 1310720, 6, 6, 1310720, 7, 65527, 1310720, 7, 65528, 1310720, 7, 65529, 1310720, 7, 65530, 1310720, 7, 65531, 1310720, 7, 65532, 1310720, 7, 65533, 1310720, 7, 65534, 1310720, 7, 65535, 1310720, 7, 0, 1310720, 7, 1, 1310720, 7, 2, 1310720, 7, 3, 1310720, 7, 4, 1310720, 7, 5, 1310720, 7, 6, 1310720, 8, 65527, 1310720, 8, 65528, 1310720, 8, 65529, 1310720, 8, 65530, 1310720, 8, 65531, 1310720, 8, 65532, 1310720, 8, 65533, 1310720, 8, 65534, 1310720, 8, 65535, 1310720, 8, 0, 1310720, 8, 1, 1310720, 8, 2, 1310720, 8, 3, 1310720, 8, 4, 1310720, 8, 5, 1310720, 8, 6, 1310720, 9, 65527, 1310720, 9, 65528, 1310720, 9, 65529, 1310720, 9, 65530, 1310720, 9, 65531, 1310720, 9, 65532, 1310720, 9, 65533, 1310720, 9, 65534, 1310720, 9, 65535, 1310720, 9, 0, 1310720, 9, 1, 1310720, 9, 2, 1310720, 9, 3, 1310720, 9, 4, 1310720, 9, 5, 1310720, 9, 6, 1310720)
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.488484, 0.872573, 0, -0.872573, 0.488484, 0, 9.52688, 8.38861)

[node name="Player" parent="." instance=ExtResource("5_036b0")]
unique_name_in_owner = true
transform = Transform3D(-0.100049, 0, 0.994983, 0, 1, 0, -0.994983, 0, -0.100049, -1.46926, 0.57996, 0.65632)

[node name="floor-square2" parent="." instance=ExtResource("8_gbfbk")]
transform = Transform3D(-4.37114e-07, -20.04, 0, 10, -8.75976e-07, 0, 0, 0, 20.04, 10.0068, 3.51375, -0.413892)

[node name="Refs" type="Node" parent="."]
script = ExtResource("6_dwbse")

[node name="Timer_G" type="Timer" parent="Refs"]
unique_name_in_owner = true
wait_time = 0.5
script = ExtResource("7_pkg7o")

[node name="pipe2" parent="." instance=ExtResource("6_pkg7o")]
transform = Transform3D(4, 0, 0, 0, 2.68755, 2.96261, 0, -2.96261, 2.68755, 3.90078, 0.497388, -8.87667)

[node name="shape-hollow-cylinder2" parent="." instance=ExtResource("7_gbfbk")]
transform = Transform3D(5, 0, 0, 0, 0.9579, 4.90738, 0, -4.90738, 0.9579, 3.84483, 3.89567, -13.5168)

[node name="number-12" parent="." instance=ExtResource("8_ioo17")]
transform = Transform3D(4.26134, 5.01315, 2.38941, -4.54544, 1.41815, 5.13107, 3.19061, -4.67517, 4.1186, 3.2525, 3.00648, -21.7618)

[node name="shape-slope2" parent="." instance=ExtResource("5_dwbse")]
transform = Transform3D(2.32069, 3.37951, 2.45496, -0.621827, 12.6125, -0.657805, -2.48271, 0, 2.45951, 7.80924, 3.14603, -28.3194)

[node name="pipe3" parent="." instance=ExtResource("6_pkg7o")]
transform = Transform3D(-15.4624, 10.3577, -7.32349, -10.9583, -5.09027, 15.9375, 6.38986, 16.3342, 9.61053, 10.5649, 8.53432, -28.6154)

[node name="wall2" parent="." instance=ExtResource("10_wse8f")]
transform = Transform3D(6.76896, 0, -16.7866, 10.2163, 14.362, 4.11955, 13.3199, -11.0156, 5.37104, 26.8823, -18.5194, 0.0307699)

[node name="shape-slope4" parent="." instance=ExtResource("5_dwbse")]
transform = Transform3D(0.0604996, -0.115734, 2.39648, -0.842948, -5.81578, 0.091471, 0.640771, -7.63985, -0.105936, 27.2281, -14.465, 7.56081)

[node name="wall3" parent="." instance=ExtResource("10_wse8f")]
transform = Transform3D(-2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, 0, 5, 29.7324, -14.9468, 9.53776)

[node name="flag2" parent="." instance=ExtResource("11_ic0uy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.8528, -14.4468, 9.6497)

[connection signal="reset_timerg" from="Refs" to="Refs/Timer_G" method="_on_refs_reset_timerg"]
[connection signal="start_timerg" from="Refs" to="Refs/Timer_G" method="_on_refs_start_timerg"]
[connection signal="stop_timerg" from="Refs" to="Refs/Timer_G" method="_on_refs_stop_timerg"]
[connection signal="timeout" from="Refs/Timer_G" to="Refs" method="_on_timer_g_timeout"]
